Fixed showing unit price by hovering over total price

--- a/templates/expense-table-item.hbs
+++ b/templates/expense-table-item.hbs
@@ -3,9 +3,13 @@
     {{#if amount}}
       <span class="amount">{{amount}}</span>
     {{/if}}
-    {{description}}
+    <span>{{description}}</span>
   </td>
-  <td class="price" title="{{amount}}x price">
+  {{#if amount}}
+  <td class="price" title="{{amount}}x {{price}}">
+  {{else}}
+  <td class="price">
+  {{/if}}
     {{total_price}}
   </td>
   <td class="date">
