--- a/templates/products-table.hbs
+++ b/templates/products-table.hbs
@@ -1,17 +1,17 @@
-<table class="expenses table">
+<table class="products table">
   <thead>
     <tr>
       <th class="description">Description</th>
       <th class="price">Price</th>
-      <th class="date">Date</th>
+      <th class="location">Location</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
   </tbody>
   <tfoot>
-  <td id="noItems" colspan="42">
-    No items have been added yet.
+  <td id="noProducts" colspan="42">
+    No products have been added yet.
   </td>
   </tfoot>
 </table>
