Renamed Location to Shop

--- a/templates/add-item-autocomplete.hbs
+++ b/templates/add-item-autocomplete.hbs
@@ -4,8 +4,8 @@
     &nbsp;-&nbsp;
     <span class="price">{{price}}</span>
   {{/if}}
-  {{#if location}}
+  {{#if shop}}
     &nbsp;-&nbsp;
-    <span class="location">@{{location}}</span>
+    <span class="shop">@{{shop}}</span>
   {{/if}}
 </li>
