--- a/templates/add-item-dialog.hbs
+++ b/templates/add-item-dialog.hbs
@@ -14,7 +14,7 @@
   <div id="additionalInputs">
     <div class="firstLine">
       <input type="text" id="inputWeight" placeholder="Weight">
-      <input type="text" id="inputLocation" placeholder="Location">
+      <input type="text" id="inputShop" placeholder="Shop">
     </div>
     <div class="secondLine">
       <input type="text" id="inputTags" placeholder="Tags">
