--- a/templates/products-table.hbs
+++ b/templates/products-table.hbs
@@ -3,7 +3,7 @@
     <tr>
       <th class="description">Description</th>
       <th class="price">Price</th>
-      <th class="location">Location</th>
+      <th class="shop">Shop</th>
       <th></th>
     </tr>
   </thead>
