--- a/templates/products-table-product.hbs
+++ b/templates/products-table-product.hbs
@@ -5,8 +5,8 @@
   <td class="price">
     {{price}}
   </td>
-  <td class="location">
-    {{location}}
+  <td class="shop">
+    {{shop}}
   </td>
   <td class="delete">X</td>
 </tr>
