Added 'Add product' button

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -60,13 +60,8 @@ span.amount
   border-radius: 3px
   margin-right: 0.2em
 
-#addItemButton
+.addButton
   position: fixed
-  background-color: mediumseagreen
-  color: white
-  font-size: 25px
-  padding: 5px
-  padding-top: 3px
   border-top-left-radius: 5px
   border-top-right-radius: 5px
   bottom: -4px
@@ -78,6 +73,19 @@ span.amount
   &:hover
     cursor: pointer
     bottom: 0px
+
+#addItemButton
+  background-color: mediumseagreen
+  color: white
+  font-size: 25px
+  padding: 5px
+  padding-top: 3px
+
+#addProductButton
+  background-color: royalblue
+  color: white
+  font-size: 17px
+  padding: 10px
 
 #addItemDialog
   position: fixed
