--- a/templates/add-item-dialog.hbs
+++ b/templates/add-item-dialog.hbs
@@ -1,23 +1,23 @@
-<div id="addItemDialog">
-  <div id="mainInputs">
+<div id="addItemDialog" class="addDialog" style="display:none;">
+  <div class="mainInputs">
     <div class="firstLine">
-      <input type="text" id="inputDes" placeholder="Description">
-      <span id="inputAmountContainer">
-        <span class="amount" id="inputAmount" contenteditable="true">1</span>
+      <input type="text" class="inputDes" placeholder="Description">
+      <span class="inputAmountContainer">
+        <span class="amount inputAmount" contenteditable="true">1</span>
       </span>
     </div>
     <div class="secondLine">
-      <input type="text" id="inputPrice" placeholder="Price">
-      <input type="text" id="inputDate" placeholder="Date">
+      <input type="text" class="inputPrice" placeholder="Price">
+      <input type="text" class="inputDate" placeholder="Date">
     </div>
   </div>
-  <div id="additionalInputs">
+  <div class="additionalInputs">
     <div class="firstLine">
-      <input type="text" id="inputWeight" placeholder="Weight">
-      <input type="text" id="inputShop" placeholder="Shop">
+      <input type="text" class="inputWeight" placeholder="Weight">
+      <input type="text" class="inputShop" placeholder="Shop">
     </div>
     <div class="secondLine">
-      <input type="text" id="inputTags" placeholder="Tags">
+      <input type="text" class="inputTags" placeholder="Tags">
     </div>
   </div>
 </div>
