'Add Product Dialog' now hidden by default

--- a/templates/add-product-dialog.hbs
+++ b/templates/add-product-dialog.hbs
@@ -1,4 +1,4 @@
-<div id="addProductDialog" class="addDialog">
+<div id="addProductDialog" class="addDialog" style="display:none;">
   <div class="mainInputs">
     <div class="firstLine">
       <input type="text" class="inputDes" placeholder="Description">
