--- a/sass/main.sass
+++ b/sass/main.sass
@@ -87,6 +87,12 @@ span.amount
   font-size: 17px
   padding: 10px
 
+#addThingButton
+  background-color: crimson
+  color: white
+  font-size: 17px
+  padding: 10px
+
 .addDialog
   position: fixed
   background-color: rgba(0, 0, 0, 0.07)
@@ -113,6 +119,14 @@ span.amount
   border: dashed royalblue
   input.inputDes
     font-size: 15px
+    width: 100%
+
+#addThingDialog
+  border: dashed crimson
+  input.inputDes
+    font-size: 15px
+    width: 100%
+  input.inputTags
     width: 100%
 
 // Autocomplete
