Expenses are now grouped by date

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -49,6 +49,24 @@ div#tabs
     font-weight: bold
   tbody tr:nth-child(odd)
     background-color: #f9f9f9
+  .dateSeparator
+    background-color: #eee
+    .flex
+      display: flex
+      justify-content: flex-start
+      .weekday
+        margin-right: 10px
+        text-transform: uppercase
+        color: rgb(163, 163, 163)
+        font-family: 'Courier'
+        font-size: 18px
+      .date
+        margin-right: auto
+        font-style: italic
+        font-size: 13px
+      .totalPrice
+        align-self: flex-end
+        font-size: 15px
 
 span.amount
   background-color: cornflowerblue
