Edit item by doubleclicking it :)

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -132,6 +132,8 @@ span.amount
   input.inputDes
     font-size: 15px
     width: 90%
+  &.edit
+    border: dashed yellowgreen
 
 #addProductDialog
   border: dashed royalblue
