--- a/templates/add-item-dialog.hbs
+++ b/templates/add-item-dialog.hbs
@@ -1,4 +1,7 @@
 <div id="addItemDialog" class="addDialog" style="display:none;">
+  <!-- Hidden inputs -->
+  <input type="hidden" class="id">
+  
   <div class="mainInputs">
     <div class="firstLine">
       <input type="text" class="inputDes" placeholder="Description">
