Now Products and Things are editable too

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -133,13 +133,15 @@ span.amount
     font-size: 15px
     width: 90%
   &.edit
-    border: dashed yellowgreen
+    border-color: yellowgreen
 
 #addProductDialog
   border: dashed royalblue
   input.inputDes
     font-size: 15px
     width: 100%
+  &.edit
+    border-color: steelblue
 
 #addThingDialog
   border: dashed crimson
@@ -148,6 +150,8 @@ span.amount
     width: 100%
   input.inputTags
     width: 100%
+  &.edit
+    border-color: lightcoral
 
 // Autocomplete
 .ui-autocomplete
