New addProduct option: price per weight

--- a/templates/add-product-dialog.hbs
+++ b/templates/add-product-dialog.hbs
@@ -1,7 +1,7 @@
 <div id="addProductDialog" class="addDialog" style="display:none;">
   <!-- Hidden inputs -->
   <input type="hidden" class="id">
-  
+
   <div class="mainInputs">
     <div class="firstLine">
       <input type="text" class="inputDes" placeholder="Description">
@@ -15,6 +15,7 @@
   <div class="additionalInputs">
     <div class="firstLine">
       <input type="text" class="inputTags" placeholder="Tags">
+      <label><input type="checkbox" name="pricePerWeight">Price per weight</label>
     </div>
   </div>
 </div>
