Each expense item added will now be associated with the corresponding product id (if applicable)

--- a/templates/add-item-dialog.hbs
+++ b/templates/add-item-dialog.hbs
@@ -1,6 +1,8 @@
 <div id="addItemDialog" class="addDialog" style="display:none;">
   <!-- Hidden inputs -->
   <input type="hidden" class="id">
+  <input type="hidden" class="productId">
+  <input type="hidden" class="thingId">
   
   <div class="mainInputs">
     <div class="firstLine">
