pricePerWeight now affects addItemDialog

--- a/templates/expenses/add-dialog.hbs
+++ b/templates/expenses/add-dialog.hbs
@@ -3,7 +3,8 @@
   <input type="hidden" class="id">
   <input type="hidden" class="productId">
   <input type="hidden" class="thingId">
-  
+  <input type="hidden" class="pricePerWeight">
+
   <div class="mainInputs">
     <div class="firstLine">
       <input type="text" class="inputDes" placeholder="Description">
