--- a/templates/products/add-dialog.hbs
+++ b/templates/products/add-dialog.hbs
@@ -15,7 +15,10 @@
   <div class="additionalInputs">
     <div class="firstLine">
       <input type="text" class="inputTags" placeholder="Tags">
+    </div>
+    <div class="secondLine">
       <label><input type="checkbox" name="pricePerWeight">Price per weight</label>
+      <input type="text" class="inputPerWeight" placeholder="Weight">
     </div>
   </div>
 </div>
