addItemDialog: inputAmount no longer reachable by tab

--- a/templates/expenses/add-dialog.hbs
+++ b/templates/expenses/add-dialog.hbs
@@ -9,7 +9,7 @@
     <div class="firstLine">
       <input type="text" class="inputDes" placeholder="Description">
       <span class="inputAmountContainer">
-        <span class="amount inputAmount" contenteditable="true">1</span>
+        <span class="amount inputAmount">1</span>
       </span>
     </div>
     <div class="secondLine">
