Associate products with things + autocomplete

--- a/templates/products/add-dialog.hbs
+++ b/templates/products/add-dialog.hbs
@@ -1,6 +1,7 @@
 <div id="addProductDialog" class="addDialog" style="display:none;">
   <!-- Hidden inputs -->
   <input type="hidden" class="id">
+  <input type="hidden" class="thingId">
 
   <div class="mainInputs">
     <div class="firstLine">
