Added simple stats tab

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -153,6 +153,18 @@ span.amount
   &.edit
     border-color: lightcoral
 
+#stats-tab
+  .inputs
+    background-color: #eeeeee
+    padding: 8px
+  .sumContainer
+    padding: 8px
+    font-weight: bold
+    font-size: 18px
+    .sum
+      font-weight: normal
+      font-style: italic
+
 // Autocomplete
 .ui-autocomplete
   position: absolute
